CREATE TABLE usuario (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome VARCHAR(150) NOT NULL,
    email VARCHAR(254) NOT NULL UNIQUE,
    senha VARCHAR(255)
);
CREATE TABLE hackathon (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome VARCHAR(150) NOT NULL,
    data_inicio DATE NOT NULL,
    data_termino DATE NOT NULL,
    max_equipes INTEGER NOT NULL CHECK (max_equipes > 0),
    CONSTRAINT ck_hackathon_datas CHECK (data_termino >= data_inicio)
);
CREATE TABLE participante (
 id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
 CONSTRAINT fk_participante_usuario FOREIGN KEY (id) REFERENCES usuario(id) ON DELETE CASCADE
);
CREATE TABLE equipe (
 id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
 nome VARCHAR(150) NOT NULL,
 hackathon_id BIGINT NOT NULL REFERENCES hackathon(id)
);
CREATE TABLE equipe_participante (
 equipe_id BIGINT NOT NULL REFERENCES equipe(id) ON DELETE CASCADE,
 participante_id BIGINT NOT NULL REFERENCES participante(id),
 PRIMARY KEY (equipe_id, participante_id)
);
