CREATE TABLE jurado (
    id BIGINT PRIMARY KEY,
    hackathon_id BIGINT NOT NULL REFERENCES hackathon(id),
    CONSTRAINT fk_jurado_usuario
        FOREIGN KEY (id)
        REFERENCES usuario(id)
        ON DELETE CASCADE
);

CREATE TABLE avaliacao (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    
    nota DOUBLE PRECISION NOT NULL,
    feedback TEXT NOT NULL,
    
    jurado_id BIGINT NOT NULL REFERENCES jurado(id),
    projeto_id BIGINT NOT NULL, -- mais tarde mudar para referenciar projeto -- talvez tenha que mudar a ordem de V x.x

    CONSTRAINT ck_avaliacao_nota
        CHECK (nota >= 0 AND nota <= 10),

    CONSTRAINT uq_avaliacao_jurado_projeto
        UNIQUE (jurado_id, projeto_id)
);