CREATE TABLE projeto (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    titulo VARCHAR(150) NOT NULL,
    descricao VARCHAR(255) NOT NULL,
    area_tematica VARCHAR(150) NOT NULL,
    equipe_id BIGINT NOT NULL UNIQUE REFERENCES equipe(id) ON DELETE CASCADE
);