CREATE TABLE mentor (
    id BIGINT PRIMARY KEY,
    hackathon_id BIGINT NOT NULL REFERENCES hackathon(id),
    CONSTRAINT fk_mentor_usuario
        FOREIGN KEY (id)
        REFERENCES usuario(id)
        ON DELETE CASCADE
);
CREATE TABLE mentoria (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    comentarios TEXT NOT NULL,
    
    equipe_id BIGINT NOT NULL REFERENCES equipe(id),
    mentor_id BIGINT NOT NULL REFERENCES mentor(id)
);