@startuml Diagrama de Classes Conceituais

skinparam classAttributeIconSize 0

abstract class Usuario {
    nome
    email
    senha
}

class Organizador extends Usuario

class Hackathon {
    nome
    dataInicio
    dataTermino
    maxEquipes
}

class Equipe {
    nome
}

class Participante extends Usuario

class Projeto {
    titulo
    descricao
    areaTematica
}

class Mentor extends Usuario {
}

class Mentoria {
    comentarios
}

class Jurado extends Usuario {
}

class Avaliacao {
    nota
    feedback
}

Hackathon "1" -- "0..*" Equipe : possui
Equipe "0..*" -- "1..*" Participante : formada por
Equipe "1" -- "0..1" Projeto : desenvolve >

Mentor "1" -- "0..*" Mentoria : registra >
Hackathon "1" -- "0..*" Mentor : credencia >

Equipe "1" -- "0..*" Mentoria : recebe >

Jurado "1" -- "0..*" Avaliacao : realiza >
Projeto "1" -- "0..*" Avaliacao : recebe >
Hackathon "1" -- "0..*" Jurado : convida >
Organizador "1" -- "0..*" Hackathon : gerencia >

@enduml